# treegen

./: .gitignore  LICENSE  README.md  action.yml  docs.html  index.html  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  update-tree.yml
assets/: site.css
examples/brand/: .filetree.json
src/treegen/: __init__.py  __main__.py  cli.py  config.py  descriptions.py  ignore.py  model.py  readme.py  scanner.py
src/treegen/renderers/: __init__.py  ascii.py  collapsible.py  svg.py
tests/: conftest.py  test_cli.py  test_config.py  test_ignore.py  test_readme.py  test_renderers.py  test_scanner.py
